fix: Merge conflicts along with missing symbols fixed